--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
       JavaScript is disabled in your browser.
       Please consider enabling it to run this app.
     </noscript>
+    <p>cryptoLog</p>
     <div id="root"></div>
   </body>
 </html>
